--- a/src/mypage.html
+++ b/src/mypage.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./mypage.js"></script>
   <title>mypage</title>
+  <script src="./mypage.js"></script>  
 </head>
 <body  class="main-page">
   <header>
@@ -42,30 +42,43 @@
         <div class="my-name-container"><span>반가워요 부엉씨</span></div>
         <div class="my-menu-container">
           <nav class="my-menu">
-            <ul class="my-menu-lists">
-              <hr class="line2" width="100%" color="brown">
-              <li class="my-menu-list"><a href="#" class="btn text-btn btn-active">
-                <span>찜한 목록</span>
-              </a>  </li>
-              <li class="my-menu-list"><a href="#" class="btn text-btn btn-active">
-                <span>장바구니</span>
-              </a>  </li>
-              <li class="my-menu-list"><a href="#" class="btn text-btn btn-active">
-                <span>주문 내역</span>
-              </a>  </li>
-              <li class="my-menu-list"><a href="#" class="btn text-btn btn-active">
-                <span>회원 정보</span>
-              </a>  </li>
-              <li class="my-menu-list"><a href="#" class="btn text-btn btn-active">
-                <span>계정 탈퇴</span>
-              </a>  </li>
-            </ul>
+            <div class="left-container">
+                <ul class="my-menu-lists">
+                  <hr class="line2" width="100%" color="brown">
+                      <li class="my-menu-list">
+                        <a href="#" onclick="showCategory('찜한 목록')" class="btn text-btn btn-active">
+                        찜한 목록
+                      </a>  </li>
+                  <li class="my-menu-list"><a href="#" onclick="showCategory('장바구니')" class="btn text-btn btn-active">
+                    장바구니
+                  </a>  </li>
+                  <li class="my-menu-list"><a href="#" onclick="showCategory('주문 내역')" class="btn text-btn btn-active">
+                    주문 내역
+                  </a>  </li>
+                  <li class="my-menu-list"><a href="#" onclick="showCategory('회원 정보')" class="btn text-btn btn-active">
+                    회원 정보
+                  </a>  </li>
+                  <li class="my-menu-list"><a href="#" onclick="showCategory('계정 탈퇴')" class="btn text-btn btn-active">
+                    계정 탈퇴
+                  </a>  </li>
+                </ul>
+            </div>
           </nav>
         </div>
       </aside>
-    <main class="my-right-container">
-    <p>카테고리 정보창</p>
-    </main>
-    
+    <div class="content" id="categoryContent">
+        <h1>부엉이 신발장에 오신걸 환영합니다!</h1>
+        <p>카테고리를 선택해주세요.</p>
+        </div>
+
+<script>
+    function showCategory(category) {
+            const contentDiv = document.getElementById('categoryContent');
+            contentDiv.innerHTML = `<p>${category}에 대한 내용을 여기에 표시합니다.</p>`;
+        }
+
+
+</script>
+
 </body>
 </html>
