--- a/src/item-page-login.html
+++ b/src/item-page-login.html
@@ -28,9 +28,9 @@
     <div class="item-container">
       <div class="item-summary">
         <ul>
-        <li class="item-name">나이키 에어포스</li>
-        <li class="item-price">100만원</li>
-        <li class="item-color">이미지@ </li>
+        <li class="item-name">Owl AirFly</li>
+        <li class="item-price">10만 깃털</li>
+        <li class="item-color"></li>
         </ul>   
       </div>
     </div>
@@ -55,16 +55,18 @@
       </div>
       <div class="chosen-option">
         <p style="font-weight: bold;">선택된 옵션</p>
-        <span id="selectedSize">Size : 어쩌구</span>
+        <span id="selectedSize">Size : </span>
         <div class="selectedcolor-box">
           <p>색상 : <div id="changedColor"></div></p>
         </div>
       </div>
       <div class="decision">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-          <path id="heart" d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" id="Like"/>
-        </svg>
-        <img src="./img/shopping cart.png" alt="장바구니">
+        <div class="like">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi" viewBox="0 0 16 16" id="heart">
+            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+          </svg>
+        </div>
+        <div class="wishlist"><img src="./img/shopping cart.png" alt="장바구니"></div>
       </div>
   </section>
   <main class="item-bottom-container">
