--- a/src/category-page-login.html
+++ b/src/category-page-login.html
@@ -15,11 +15,11 @@
     <header>
       <nav class="nav-bar">
           <div class="nav-bar-items">
-            <div class="nav-bar-comp-name"><a href="./index.html" class="btn">부엉이 신발장</a></div>
+            <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
             <div class="nav-bar-menu">
               <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
-              <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
-              <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
+              <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+              <a href="./item-page-logout.html" class="btn nav-btn"> LOGOUT </a>
             </div>
           </div>
       </nav>
