--- a/src/item-page-logout.html
+++ b/src/item-page-logout.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+  <!-- <script src="./index.js"></script> -->
   <title>item-page</title>
 </head>
 <body>
@@ -139,18 +140,9 @@
         <button class="btn" onclick="SigninPopupClose(), LoginPopupOpen()">부엉이랑 친구하기</button>
       </div>
     </section>
-    <section class="popup-background search-popup-background">
-      <div class="popup search-popup">
-        <div class="btn" onclick="SearchPopupClose()">X</div>
-        <div class="search-box">
-          <input type="text" id="search-input">
-          <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
-        </div>
-      </div>
-    </section>
     <header>
-      <button class="more-info-select selected" onclick="select()">상세정보</button>
-      <button class="review-select" onclick="select()" >리뷰</button>
+      <button class="more-info-select selected">상세정보</button>
+      <button class="review-select">리뷰</button>
     </header>
     <section class="item-details">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident iusto quae ratione, maiores fuga doloremque quidem hic eligendi consequuntur dicta atque temporibus fugiat saepe nemo porro dolorum nihil blanditiis voluptas at reprehenderit. Explicabo ullam odio at necessitatibus ipsum ab, temporibus eveniet nostrum quaerat quisquam architecto, illum sapiente eligendi deleniti ut molestiae eum. Voluptate, laborum provident voluptatum odio esse aliquid quae delectus laboriosam ab harum magni placeat dolores modi adipisci voluptates vel porro eaque eius veritatis! Voluptate consectetur eligendi laborum dolore quae itaque ipsa dolorum, corrupti dolores, expedita fugiat velit et porro excepturi minima veniam ut a cum eaque? Dolor illo, inventore laboriosam deserunt distinctio possimus quas nam. Cumque omnis incidunt ipsam non molestiae, exercitationem sint delectus in labore, atque veniam dolor explicabo molestias tempora maxime assumenda placeat tempore accusantium, quibusdam sit voluptates doloribus. Autem ratione, quisquam veniam perferendis veritatis sapiente itaque deleniti nihil tempora placeat possimus, minima maiores impedit voluptatum eligendi. Nemo et minus dicta nihil inventore, recusandae mollitia aliquid iste rerum corporis repudiandae dolores maxime excepturi unde fugiat culpa laudantium modi. Laboriosam sapiente doloremque adipisci necessitatibus molestias aliquid debitis eveniet quaerat quasi saepe rerum, nobis ad ex nemo illum laudantium consequatur ut dolorum id corrupti nesciunt non? Sit quos harum fugiat autem placeat minima quia iusto, cumque quam delectus, vel ipsum? Aliquam doloremque sint sed officia doloribus vero ut numquam tenetur quibusdam, nulla minus aperiam ab a fuga alias assumenda animi magnam labore consequatur nobis dolorem ipsa incidunt quidem vel. Quam facere, minus perspiciatis odit illo soluta eum quisquam ipsam deserunt nemo facilis aliquam esse cupiditate officia pariatur incidunt unde error atque? Quam necessitatibus at officia soluta corrupti est ad earum perspiciatis accusantium nihil quisquam blanditiis, harum autem molestias enim nulla suscipit dolor nisi! Libero, eligendi. Impedit, officia magnam dolor ducimus illo facere ea commodi eligendi dolores sint omnis!</p>
@@ -159,8 +151,6 @@
       <p>우왕 부엉이 짱 선물 고마워~~~</p>
     </section>
   </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./item-page.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
