--- a/src/item-page-login.html
+++ b/src/item-page-login.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./item-page.css">
   <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +13,7 @@
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
             <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
             <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
