--- a/src/cart-page.html
+++ b/src/cart-page.html
@@ -13,6 +13,14 @@
 <body>
   <header>
     <nav class="nav-bar">
+        <div class="nav-bar-items">
+          <div class="nav-bar-comp-name"><a href="./index.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-menu">
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+            <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
+            <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
+          </div>
+        </div>
     </nav>
   </header>
   <main class="list-box-container">
@@ -20,7 +28,7 @@
       <thead class="wish-list-table-head">
         <tr>
           <th scope="col">전체 개</th>
-          <th scope="col">전체 선택<input type="checkbox" class="check_all"></th>
+          <th scope="col">전체 선택<input type="checkbox" class="check"></th>
           <th scope="col">상품명</th>
           <th scope="col">상품 가격</th>
           <th scope="col">주문 갯수</th>
@@ -31,7 +39,7 @@
       </thead>
       <tbody class="wish-list-table-body">
         <th scope="col" class="list-box-item">전체 개</th>
-        <th scope="col" class="list-box-item"><input type="checkbox" class="check_all"></th>
+        <th scope="col" class="list-box-item"><input type="checkbox" class="check"><img src="./img/shoes.svg"></th>
         <th scope="col" class="list-box-item">에어조던</th>
         <th scope="col" class="list-box-item">100만원</th>
         <th scope="col" class="list-box-item">주문 갯수</th>
@@ -40,7 +48,7 @@
         <th scope="col" class="list-box-item">배송비</th>
       </tr>
         <th scope="col" class="list-box-item">전체 개</th>
-        <th scope="col" class="list-box-item"><input type="checkbox" class="check_all"></th>
+        <th scope="col" class="list-box-item"><input type="checkbox" class="check"></th>
         <th scope="col" class="list-box-item">에어조던</th>
         <th scope="col" class="list-box-item">100만원</th>
         <th scope="col" class="list-box-item">주문 갯수</th>
@@ -49,7 +57,7 @@
         <th scope="col" class="list-box-item">배송비</th>
       </tr>
         <th scope="col" class="list-box-item">전체 개</th>
-        <th scope="col" class="list-box-item"><input type="checkbox" class="check_all"></th>
+        <th scope="col" class="list-box-item"><input type="checkbox" class="check"></th>
         <th scope="col" class="list-box-item">에어조던</th>
         <th scope="col" class="list-box-item">100만원</th>
         <th scope="col" class="list-box-item">주문 갯수</th>
@@ -69,7 +77,7 @@
     <div class="total-price">총계 : 1120만원</div>
   </section>
   <section class="pay-cart-btn">
-    <button class="btn pay-btn">결제하기</button>
+    <a href="./pay.html"><button class="btn pay-btn">결제하기</button></a>
   </section>
 
   <footer class="pay-footer">
