--- a/src/cart-page.html
+++ b/src/cart-page.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./cart-page.js"></script>
 </head>
 <body>
   <header>
@@ -27,54 +26,62 @@
     <table class="wish-list-table cart-table">
       <thead class="wish-list-table-head">
         <tr>
-          <th scope="col">전체 개</th>
-          <th scope="col">전체 선택<input type="checkbox" class="check"></th>
+        <th scope="col" class="check-item"><input type="checkbox" class="check" id="checkAll"></th>
+          <th scope="col">상품 이미지</th>
           <th scope="col">상품명</th>
           <th scope="col">상품 가격</th>
           <th scope="col">주문 갯수</th>
-          <th scope="col">주문 가격</th>
-          <th scope="col">주문 관리</th>
           <th scope="col">배송비</th>
         </tr>
       </thead>
       <tbody class="wish-list-table-body">
-        <th scope="col" class="list-box-item">전체 개</th>
-        <th scope="col" class="list-box-item"><input type="checkbox" class="check"><img src="./img/shoes.svg"></th>
-        <th scope="col" class="list-box-item">에어조던</th>
-        <th scope="col" class="list-box-item">100만원</th>
-        <th scope="col" class="list-box-item">주문 갯수</th>
-        <th scope="col" class="list-box-item">주문 가격</th>
-        <th scope="col" class="list-box-item">주문 관리</th>
-        <th scope="col" class="list-box-item">배송비</th>
+      <tr>
+        <th scope="col" class="list-box-item check-item" ><input type="checkbox" class="check"></th>
+        <th scope="col" class="list-box-item cart-item-image"><img src="./img/shoes.svg"></th>
+        <th scope="col" class="list-box-item cart-item-name">에어조던</th>
+        <th scope="col" class="list-box-item cart-item-price">1000만원</th>
+        <th scope="col" class="list-box-item"><div class="item-quantity-counter">
+          <input type="button" class="calc-btn" onclick="count1('minus')" value="-"/>
+          <div class="quantity-result">1</div>
+          <input type="button" class="calc-btn" onclick="count1('plus')" value="+"/>
+        </div></th>
+        <th scope="col" class="list-box-item cart-item-ship-price">120만원</th>
       </tr>
-        <th scope="col" class="list-box-item">전체 개</th>
-        <th scope="col" class="list-box-item"><input type="checkbox" class="check"></th>
-        <th scope="col" class="list-box-item">에어조던</th>
-        <th scope="col" class="list-box-item">100만원</th>
-        <th scope="col" class="list-box-item">주문 갯수</th>
-        <th scope="col" class="list-box-item">주문 가격</th>
-        <th scope="col" class="list-box-item">주문 관리</th>
-        <th scope="col" class="list-box-item">배송비</th>
+      <tr>
+      <th scope="col" class="list-box-item check-item"><input type="checkbox" class="check"></th>
+      <th scope="col" class="list-box-item cart-item-image"><img src="./img/shoes.svg"></th>
+        <th scope="col" class="list-box-item cart-item-name">에어조던</th>
+        <th scope="col" class="list-box-item" cart-item-price>1000만원</th>
+        <th scope="col" class="list-box-item"><div class="item-quantity-counter">
+          <input type="button" class="calc-btn" onclick="count2('minus')" value="-"/>
+          <div class="quantity-result">1</div>
+          <input type="button" class="calc-btn" onclick="count2('plus')" value="+"/>
+        </div></th>
+        <th scope="col" class="list-box-item cart-item-ship-price
+          ">120만원</th>
       </tr>
-        <th scope="col" class="list-box-item">전체 개</th>
-        <th scope="col" class="list-box-item"><input type="checkbox" class="check"></th>
-        <th scope="col" class="list-box-item">에어조던</th>
-        <th scope="col" class="list-box-item">100만원</th>
-        <th scope="col" class="list-box-item">주문 갯수</th>
-        <th scope="col" class="list-box-item">주문 가격</th>
-        <th scope="col" class="list-box-item">주문 관리</th>
-        <th scope="col" class="list-box-item">배송비</th>
+        <tr>
+        <th scope="col" class="list-box-item check-item"><input type="checkbox" class="check"></th>
+        <th scope="col" class="list-box-item cart-item-image"><img src="./img/shoes.svg"></th>
+        <th scope="col" class="list-box-item cart-item-name">에어조던프리미엄대박델타</th>
+        <th scope="col" class="list-box-item cart-item-price">1000만원</th>
+        <th scope="col" class="list-box-item"><div class="item-quantity-counter">
+          <input type="button" class="calc-btn" onclick="count3('minus')" value="-"/>
+          <div class="quantity-result">1</div>
+          <input type="button" class="calc-btn" onclick="count3('plus')" value="+"/>
+        </div></th>
+        <th scope="col" class="list-box-item cart-item-ship-price">120만원</th>
         </tr>
       </tbody>
     </table>
   </main> 
-  <br>
+
   <section class="cart-sum">
     <div class="items-price">제품 가격 : 1000만원</div>
     <div>  + </div>
     <div class="shipment-price"> 배송비 : 120만원</div>
     <div> = </div>
-    <div class="total-price">총계 : 1120만원</div>
+    <div class="total-price">총계 : 3360만원</div>
   </section>
   <section class="pay-cart-btn">
     <a href="./pay.html"><button class="btn pay-btn">결제하기</button></a>
@@ -91,6 +98,7 @@
       </ul>
     </div>
   </footer>
+<script src="./cart-page.js"></script>
 </body>
 
 </html>
