--- a/src/item-page-logout.html
+++ b/src/item-page-logout.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <!-- <script src="./index.js"></script> -->
   <title>item-page</title>
 </head>
 <body>
@@ -151,6 +150,6 @@
       <p>우왕 부엉이 짱 선물 고마워~~~</p>
     </section>
   </main>
-  <script src="./index.js"></script>
+  <script src="./item-page.js"></script>
 </body>
 </html>
