--- a/src/cart-page.html
+++ b/src/cart-page.html
@@ -13,8 +13,25 @@
 <body>
   <header>
     <nav class="nav-bar">
+        <div class="nav-bar-items">
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-menu">
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="./item-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+          </div>
+        </div>
     </nav>
   </header>
+  <section class="popup-background search-popup-background">
+    <div class="popup search-popup">
+      <div class="btn" onclick="SearchPopupClose()">X</div>
+      <div class="search-box">
+        <input type="text" id="search-input">
+        <a href="./category-page-login.html"><img src="./img/search.svg" alt=""></a>
+      </div>
+    </div>
+  </section>
   <main class="list-box-container">
     <table class="wish-list-table cart-table">
       <thead class="wish-list-table-head">
