--- a/src/cart-page.html
+++ b/src/cart-page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./cart-page.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
@@ -13,11 +13,11 @@
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="./index.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
             <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
-            <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
-            <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
+            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="./main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
           </div>
         </div>
     </nav>
@@ -98,7 +98,7 @@
       </ul>
     </div>
   </footer>
-<script src="./cart-page.js"></script>
+<script src="./index.js"></script>
 </body>
 
 </html>
