--- a/src/pay.html
+++ b/src/pay.html
@@ -3,27 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pay.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./pay.js"></script>
   <title>index</title>
 </head>
 <body>
   <header>
-  <nav class="nav-bar">
-      <div class="nav-bar-items">
-        <div class="nav-bar-comp-name"><a href="./index.html" class="btn" style="color: black;">부엉이 신발장</a></div>
-        <div class="nav-bar-menu">
-          <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
-          <button class="btn nav-btn" onclick="SigninPopupOpen()"> SIGNIN </button>
-          <button class="btn nav-btn" onclick="LoginPopupOpen()"> LOGIN </button>
+    <nav class="nav-bar">
+        <div class="nav-bar-items">
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+          <div class="nav-bar-menu">
+            <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
+            <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
+            <a href="./main-page-logout.html" class="btn nav-btn"> LOGOUT </a>
+          </div>
         </div>
-      </div>
-  </nav>
-</header>
+    </nav>
+  </header>
   
   <main class="pay-page">
     <section class="ship-info">
@@ -65,5 +64,6 @@
       </ul>
     </div>
   </footer>
+  <script src="./index.js"></script>
 </body>
 </html>
