login, signin 완성

--- a/src/category-page-login.html
+++ b/src/category-page-login.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="nav-bar">
           <div class="nav-bar-items">
-            <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn" style="color: black;">부엉이 신발장</a></div>
+            <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
             <div class="nav-bar-menu">
               <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
               <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
