--- a/src/item-page-logout.html
+++ b/src/item-page-logout.html
@@ -7,7 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <title>item-page</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script defer src="./index.js"></script>
+  <title>Owl's Shoes</title>
 </head>
 <body>
   <header>
@@ -149,7 +151,5 @@
       <p>우왕 부엉이 짱 선물 고마워~~~</p>
     </section>
   </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="./index.js"></script>
 </body>
 </html>
