--- a/src/paid.html
+++ b/src/paid.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script defer src="./index.js"></script>
+  <title>Owl's Shoes</title>
 </head>
 <body>
   <header>
@@ -61,6 +63,5 @@
       계속 쇼핑하기</button></a> 
     </section>
   </main>
-  <script src="./index.js"></script>
 </body>
 </html>
