--- a/src/unpaid.html
+++ b/src/unpaid.html
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./index.js"></script>
+  <script defer src="./index.js"></script>
+  <title>Owl's Shoes</title>
 </head>
 <header>
 
@@ -16,7 +17,7 @@
 <body>
   <div class="fail-payment">
     <p> 결제에 실패하였습니다. </p>
-    <a href="./pay.html"><button class="btn goBackTo-btn">화면으로 돌아가기</button></a>
+    <a href="./pay.html"><button class="btn goBackTo-btn">이전 화면으로 돌아가기</button></a>
     <br>
     <a href="./main-page-login.html"><button class="btn goBackTo-btn">시작 화면으로 돌아가기</button></a>
   </div>
