--- a/src/category-page-login.html
+++ b/src/category-page-login.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script src="./index.js"></script>
-  <title>index</title>
+  <script defer src="./index.js"></script>
+  <title>Owl's Shoes</title>
 </head>
   <body>
     <header>
@@ -140,7 +140,5 @@
         </div>
       </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./category.js"></script>
   </body>
 </html>
