--- a/src/item-page-login.html
+++ b/src/item-page-login.html
@@ -7,7 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-  <title>item-page</title>
+  <script defer src="./index.js"></script>
+  <title>Owl's Shoes</title>
 </head>
 <body>
   <header>
@@ -149,6 +150,5 @@
       <p>우왕 부엉이 짱 선물 고마워~~~</p>
     </section>
   </main>
-  <script src="./item-page.js"></script>
 </body>
 </html>
