--- a/src/mypage.html
+++ b/src/mypage.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <title>mypage</title>
-  <script src="./mypage.js"></script>  
+  <script defer src="./index.js"></script>
+  <title>Owl's Shoes</title>
 </head>
 <body  class="main-page">
   <header>
     <nav class="nav-bar">
         <div class="nav-bar-items">
-          <div class="nav-bar-comp-name"><a href="./index.html" class="btn">부엉이 신발장</a></div>
+          <div class="nav-bar-comp-name"><a href="./main-page-login.html" class="btn">부엉이 신발장</a></div>
           <div class="nav-bar-menu">
             <button class="btn search-btn" onclick="SearchPopupOpen()"><img src="./img/search.svg" alt=""></button>
             <a href="./mypage.html" class="btn nav-btn"> MYPAGE </a>
