--- a/src/unpaid.html
+++ b/src/unpaid.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./unpaid.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="./user-info/user-info.js" type="text/javascript"></script>
   <script defer src="./index.js"></script>
   <title>Owl's Shoes</title>
 </head>
-<header>
-
-</header>
 <body>
   <div class="fail-payment">
     <p> 결제에 실패하였습니다. </p>
