--- a/src/item-page-logout.html
+++ b/src/item-page-logout.html
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="./user-info/user-info.js" type="text/javascript"></script>
   <script defer src="./index.js"></script>
+  <script defer src="./item-page.js"></script>
   <title>Owl's Shoes</title>
   </head>
 <body>
